--- a/env.template
+++ b/env.template
@@ -12,3 +12,7 @@ STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret-here
 
 # App URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# OpenAI Configuration (Optional - for Matte AI Assistant)
+# Get this from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-api-key-here
