--- a/env.template
+++ b/env.template
@@ -5,13 +5,19 @@ NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
-# Stripe Configuration (Optional for Drip-lite - only needed for future SaaS billing)
-# Get these from: Stripe Dashboard → Developers → API keys
-STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key-here
-STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret-here
-
 # App URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Stripe Configuration (for customer online payments)
+# Get these from: Stripe Dashboard → Developers → API keys
+STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key-here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key-here
+STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret-here
+
+# Weather API (OpenWeatherMap - free tier)
+# Get this from: https://openweathermap.org/api
+# Used for weather alerts on outdoor jobs
+WEATHER_API_KEY=your-openweathermap-api-key-here
 
 # OpenAI Configuration (Optional - for Matte AI Assistant)
 # Get this from: https://platform.openai.com/api-keys
